# courseProject_sdz3

./: AlgorithmTest.cpp  AlgorithmTest.h  CMakeLists.txt  DiscreteKnapsackProblem.cpp  DiscreteKnapsackProblem.h  TimeMeasurement.cpp  TimeMeasurement.h  TravellingSalesmanProblem.cpp  TravellingSalesmanProblem.h  UsefulStructuresForAlgorithms.cpp  UsefulStructuresForAlgorithms.h  main.cpp
